--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,17 @@
 <% include header %>
 
-<div class="container">
-  <h1>Original Coast Clothing</h1>
-  <img src="/logo.png" />
-  <p class="lead">
-    We’re open 7 days, so start your shopping experience now!
-  </p>
-  <p>
-    This site is part of the Sample Messenger Bot experience of Original Coast
-    Clothing
-  </p>
-  <ul>
-    <li>
-      <a href="https://www.originalcoastclothing.com/"
-        >Original Coast Clothing Website</a
+    <div class="container">
+        <h1>Original Coast Clothing</h1>
+        <img src="/logo.png" />
+        <p class="lead">
+            We’re open 7 days, so start your shopping experience now!
+        </p>
+        <p>
+            This site is part of the Sample Messenger Bot experience of Original Coast Clothing
+        </p>
+        <ul>
+            <li>
+                <a href="https://www.originalcoastclothing.com/">Admin2.0</a
       >
     </li>
     <li>
